--- a/sdk-core/simple_create-tagging-record/index.html
+++ b/sdk-core/simple_create-tagging-record/index.html
@@ -4,14 +4,75 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>ETS Examples: sdk-core create tagging record</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      margin: 0;
+      padding: 20px;
+      background-color: #f4f4f4;
+    }
+
+    h1 {
+      color: #333;
+    }
+
+    #app {
+      background-color: white;
+      border-radius: 5px;
+      padding: 20px;
+      margin-top: 20px;
+    }
+
+    button {
+      background-color: #4CAF50;
+      border: none;
+      color: white;
+      padding: 15px 32px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 16px;
+      margin: 4px 2px;
+      cursor: pointer;
+      border-radius: 4px;
+    }
+
+    pre {
+      white-space: pre-wrap;
+      word-wrap: break-word;
+    }
+
+    a {
+      color: #0066cc;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 
 <body>
-  <h1>ETS Examples: sdk-core read</h1>
-  <div id="app">Loading...</div>
+  <h1>ETS Examples: sdk-core create tagging record</h1>
+  <button id="runDemoBtn">Run Demo</button>
+  <div id="app">Click 'Run Demo' to start</div>
   <script type="module">
-    import { tag, tagExists } from './index.ts';
-    document.querySelector('#app').innerHTML = `<div style="margin-bottom: 16px;">Tag: ${tag}<br />Tag exists: ${tagExists}</div>`;
+    import { runDemo } from './index.ts';
+
+    async function updateResult() {
+      const { result, link } = await runDemo();
+      const appDiv = document.querySelector('#app');
+
+      appDiv.innerHTML = `<pre>${result}</pre>`;
+      if (link) {
+        appDiv.innerHTML += `<p>View the tagging record: <a href="${link}" target="_blank">${link}</a></p>`;
+      }
+    }
+
+    document.getElementById('runDemoBtn').addEventListener('click', updateResult);
   </script>
 </body>
 
